feat: add dataset acronyms and corresponding LaTeX commands for easier propagation of changes

--- a/acronyms.sty
+++ b/acronyms.sty
@@ -13,6 +13,25 @@
 \preto\chapter\acbarrier
 \preto\section\acbarrier
 
+% Dataset Shortcuts
+\DeclareAcronym{CCHIT}{short=CCHIT, long=CCHIT}
+\DeclareAcronym{CM-1NASA}{short=CM1, long=CM-1NASA}
+\DeclareAcronym{Dronology}{short=Dron., long=Dronology}
+\DeclareAcronym{GANNT}{short=GANNT, long=GANNT}
+\DeclareAcronym{MODIS}{short=MODIS, long=MODIS Dataset}
+\DeclareAcronym{WARC}{short=WARC, long=WARC}
+\DeclareAcronym{Avg}{short=Avg., long=average}
+\DeclareAcronym{WeightedAvg}{short=W. Avg., long=weighted average}
+\newcommand{\CMOneNASA}[0]{\acs{CM-1NASA}\xspace}
+\newcommand{\Dronology}[0]{\acs{Dronology}\xspace}
+\newcommand{\GANNT}[0]{\acs{GANNT}\xspace}
+\newcommand{\ModisDataset}[0]{\acs{MODIS}\xspace}
+\newcommand{\WARC}[0]{\acs{WARC}\xspace}
+\newcommand{\Avg}[0]{\acs{Avg}\xspace}
+\newcommand{\WeightedAvg}[0]{\acs{WeightedAvg}\xspace}
+\newcommand{\Average}[0]{\ac{Avg}\xspace}
+\newcommand{\WeightedAverage}[0]{\ac{WeightedAvg}\xspace}
+
 \DeclareAcronym{ToT}{short=ToT, long=tree-of-thought}
 \DeclareAcronym{CoT}{short=CoT, long=chain-of-thought}
 \DeclareAcronym{APO}{short=APO, long=automatic prompt optimization}
@@ -36,6 +55,8 @@
 \DeclareAcronym{AI}{short=AI, long=Artifical Intelligence}
 \DeclareAcronym{iter}{short=\ensuremath{i}, long=maximum iteration steps}
 \DeclareAcronym{feed}{short=\ensuremath{n}, long=feedback sample size}
+
+
 
 \newcommand{\ToT}[0]{\ac{ToT}\xspace}
 \newcommand{\CoT}[0]{\ac{CoT}\xspace}
@@ -69,3 +90,4 @@
 \newcommand{\iter}[0]{\acs{iter}\xspace}
 \newcommand{\feed}[0]{\acs{feed}\xspace}
 \newcommand{\tripplequote}[0]{\textquotesingle{}\textquotesingle{}\textquotesingle{}}
+
