--- a/tables/SimpleAndRepeatedOptimization.tex
+++ b/tables/SimpleAndRepeatedOptimization.tex
@@ -1,5 +1,12 @@
 %! Author = Daniel Schwab
 %! Date = 2025-08-30
+\providecommand{\CMOneNASA}{CMOneNASA}
+\providecommand{\Dronology}{Dronology}
+\providecommand{\GANNT}{GANNT}
+\providecommand{\ModisDataset}{ModisDataset}
+\providecommand{\WARC}{WARC}
+\providecommand{\Avg}{Avg}
+\providecommand{\WeightedAvg}{WeightedAvg}
 
 \begin{tabularx}{\textwidth}{p{1.3em}l Z  Z  Z  Z  Z  Z  Z  Z  Z }
     \toprule
@@ -9,43 +16,43 @@
     \cmidrule(lr){ 9-11 }
     &                            & GPT-4o        & GPT-4o-mini        & Llama 3.1        & GPT-4o        & GPT-4o-mini        & Llama 3.1        & GPT-4o        & GPT-4o-mini        & Llama 3.1           \\
     \midrule
-    \multirow{ 3 }{*}{\rotatebox{90}{CM1-NASA}}
+    \multirow{ 3 }{*}{\rotatebox{90}{\CMOneNASA}}
     & P.    & 0.349    & 0.337    & 0.33    & 0.354    & 0.622    & 0.33    & 0.341    & 0.333    & \textbf{ 1.0 } \\
     & R.    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & 0.511    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & \textbf{ 0.644 }    & 0.0 \\
     & F\textsubscript{1}    & 0.453    & 0.443    & 0.436    & 0.457    & \textbf{ 0.561 }    & 0.436    & 0.446    & 0.439    & 0.0 \\
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
-    \multirow{ 3 }{*}{\rotatebox{90}{GANNT}}
-    & P.    & 0.552    & 0.544    & 0.561    & 0.578    & 0.6    & 0.544    & 0.578    & 0.544    & \textbf{ 1.0 } \\
-    & R.    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & 0.485    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & 0.0 \\
-    & F\textsubscript{1}    & 0.548    & 0.544    & 0.552    & \textbf{ 0.561 }    & 0.537    & 0.544    & \textbf{ 0.561 }    & 0.544    & 0.0 \\
-    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
-
-    \multirow{ 3 }{*}{\rotatebox{90}{ModisDataset}}
-    & P.    & 0.212    & 0.212    & 0.224    & 0.4    & 0.333    & 0.145    & 0.435    & 0.244    & \textbf{ 1.0 } \\
-    & R.    & \textbf{ 0.268 }    & \textbf{ 0.268 }    & \textbf{ 0.268 }    & 0.244    & 0.024    & \textbf{ 0.268 }    & 0.244    & \textbf{ 0.268 }    & 0.0 \\
-    & F\textsubscript{1}    & 0.237    & 0.237    & 0.244    & 0.303    & 0.045    & 0.188    & \textbf{ 0.312 }    & 0.256    & 0.0 \\
-    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
-
-    \multirow{ 3 }{*}{\rotatebox{90}{WARC}}
-    & P.    & 0.394    & 0.38    & 0.377    & 0.437    & 0.534    & 0.377    & 0.438    & 0.379    & \textbf{ 1.0 } \\
-    & R.    & \textbf{ 0.699 }    & \textbf{ 0.699 }    & 0.684    & 0.684    & 0.632    & \textbf{ 0.699 }    & 0.669    & 0.691    & 0.0 \\
-    & F\textsubscript{1}    & 0.504    & 0.492    & 0.486    & 0.533    & \textbf{ 0.579 }    & 0.49    & 0.529    & 0.49    & 0.0 \\
-    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
-
-    \multirow{ 3 }{*}{\rotatebox{90}{dronology}}
+    \multirow{ 3 }{*}{\rotatebox{90}{\Dronology}}
     & P.    & 0.395    & 0.387    & 0.382    & 0.41    & 0.516    & 0.386    & 0.407    & 0.387    & \textbf{ 1.0 } \\
     & R.    & \textbf{ 0.695 }    & \textbf{ 0.695 }    & 0.682    & 0.686    & 0.577    & \textbf{ 0.695 }    & 0.686    & 0.691    & 0.0 \\
     & F\textsubscript{1}    & 0.504    & 0.498    & 0.489    & 0.514    & \textbf{ 0.545 }    & 0.497    & 0.511    & 0.496    & 0.0 \\
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
-    \multirow{ 3 }{*}{\rotatebox{90}{Avg.}}
+    \multirow{ 3 }{*}{\rotatebox{90}{\GANNT}}
+    & P.    & 0.552    & 0.544    & 0.561    & 0.578    & 0.6    & 0.544    & 0.578    & 0.544    & \textbf{ 1.0 } \\
+    & R.    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & 0.485    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & \textbf{ 0.544 }    & 0.0 \\
+    & F\textsubscript{1}    & 0.548    & 0.544    & 0.552    & \textbf{ 0.561 }    & 0.537    & 0.544    & \textbf{ 0.561 }    & 0.544    & 0.0 \\
+    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
+
+    \multirow{ 3 }{*}{\rotatebox{90}{\ModisDataset}}
+    & P.    & 0.212    & 0.212    & 0.224    & 0.4    & 0.333    & 0.145    & 0.435    & 0.244    & \textbf{ 1.0 } \\
+    & R.    & \textbf{ 0.268 }    & \textbf{ 0.268 }    & \textbf{ 0.268 }    & 0.244    & 0.024    & \textbf{ 0.268 }    & 0.244    & \textbf{ 0.268 }    & 0.0 \\
+    & F\textsubscript{1}    & 0.237    & 0.237    & 0.244    & 0.303    & 0.045    & 0.188    & \textbf{ 0.312 }    & 0.256    & 0.0 \\
+    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
+
+    \multirow{ 3 }{*}{\rotatebox{90}{\WARC}}
+    & P.    & 0.394    & 0.38    & 0.377    & 0.437    & 0.534    & 0.377    & 0.438    & 0.379    & \textbf{ 1.0 } \\
+    & R.    & \textbf{ 0.699 }    & \textbf{ 0.699 }    & 0.684    & 0.684    & 0.632    & \textbf{ 0.699 }    & 0.669    & 0.691    & 0.0 \\
+    & F\textsubscript{1}    & 0.504    & 0.492    & 0.486    & 0.533    & \textbf{ 0.579 }    & 0.49    & 0.529    & 0.49    & 0.0 \\
+    \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
+
+    \multirow{ 3 }{*}{\rotatebox{90}{\Avg}}
     & P.    & 0.38    & 0.372    & 0.375    & 0.436    & 0.521    & 0.356    & 0.44    & 0.377    & \textbf{ 1.0 } \\
     & R.    & \textbf{ 0.57 }    & \textbf{ 0.57 }    & 0.564    & 0.56    & 0.446    & \textbf{ 0.57 }    & 0.557    & 0.568    & 0.0 \\
     & F\textsubscript{1}    & 0.449    & 0.443    & 0.441    & \textbf{ 0.474 }    & 0.453    & 0.431    & 0.472    & 0.445    & 0.0 \\
     \arrayrulecolor{kit-gray30} \midrule \arrayrulecolor{black}
 
-    \multirow{ 3 }{*}{\rotatebox{90}{Weighted Avg.}}
+    \multirow{ 3 }{*}{\rotatebox{90}{\WeightedAvg}}
     & P.    & 0.397    & 0.388    & 0.387    & 0.434    & 0.527    & 0.38    & 0.434    & 0.39    & \textbf{ 1.0 } \\
     & R.    & \textbf{ 0.637 }    & \textbf{ 0.637 }    & 0.627    & 0.627    & 0.529    & \textbf{ 0.637 }    & 0.623    & 0.633    & 0.0 \\
     & F\textsubscript{1}    & 0.484    & 0.477    & 0.472    & 0.503    & \textbf{ 0.514 }    & 0.471    & 0.501    & 0.476    & 0.0 \\
