feat: add evaluation configurations for gradient descent optimization
 - support detection for same prompts that have been used by multiple evaluations in table generation
 - add apo evaluation script

--- a/sections/evaluation.tex
+++ b/sections/evaluation.tex
@@ -366,3 +366,12 @@ A prevalent issue remains that more iteration steps often do not yield better re
         \label{tab:zadenoori_optimization}
     \end{table}
 \end{landscape}
+
+\begin{table}
+    \centering
+    \renewcommand{\arraystretch}{1}
+    \input{tables/GradientOptimizationPryzant}
+    \renewcommand{\arraystretch}{1}
+    \caption{Gradient Descent based Automatic Prompt Optimization}
+    \label{tab:gradient}
+\end{table}
