Update on Overleaf.

--- a/sections/approach.tex
+++ b/sections/approach.tex
@@ -4,8 +4,8 @@ In this chapter, I will outline how my thesis will be realized and provide sourc
 My work aims to implement three different classifiers into the framework.
 First, I plan to implement a simple \ToT classifier in \autoref{approach:sec:tot} to broaden the baseline to compare later optimized prompts against.
 Next, I expect to work on a reduced iterative optimizer in \autoref{approach:sec:naive_iterative} using a naive approach to optimization.
-After this already provides basic components and data to evaluate the more sophisticated algorithm by \citewithauthor{pryzant2023AutomaticPrompt} will be implemented in \autoref{approach:sec:gradient_descent}.
-Last but not least, I will explain how I plan to evaluate and compare my findings in \autoref{approach:sec:evaluation}.
+This already provides the basic components and data to evaluate the more sophisticated algorithm by \citewithauthor{pryzant2023AutomaticPrompt}, which will be implemented in \autoref{approach:sec:gradient_descent}.
+Lastly, I will explain how I plan to evaluate and compare my findings in \autoref{approach:sec:evaluation}.
 
 \section{Simple Tree-of-Thought Classifier}
 \label{approach:sec:tot}
