--- a/sections/implementation.tex
+++ b/sections/implementation.tex
@@ -12,4 +12,6 @@
 \chapter{Implementation}
 \label{ch:Implementation}
 
+To achieve the goal set by this thesis, a new prompt optimizer component was implemented into the \LiSSAf.
+
 \dots
