--- a/sections/abstract_en.tex
+++ b/sections/abstract_en.tex
@@ -11,4 +11,4 @@
 %% Version 1.6, 2024-06-07
 
 \Abstract
-English abstract.
+This work presents an \apo approach using \llms to optimize prompts for \tlr tasks.
