Update on Overleaf.

--- a/acronyms.sty
+++ b/acronyms.sty
@@ -56,6 +56,7 @@
 \DeclareAcronym{iter}{short=\ensuremath{i}, long=maximum iteration steps}
 \DeclareAcronym{feed}{short=\ensuremath{n}, long=feedback sample size}
 \DeclareAcronym{ucb}{short=UCB, long=Upper Confidence Bound}
+\DeclareAcronym{REST}{short=REST, long=Representational State Transfer}
 
 
 
@@ -69,10 +70,12 @@
 \newcommand{\LLMs}[0]{\acp{LLM}\xspace}
 \newcommand{\TLR}[0]{\ac{TLR}\xspace}
 \newcommand{\TLs}[0]{\acp{TL}\xspace}
+\newcommand{\TL}[0]{\ac{TL}\xspace}
 \newcommand{\ProTeGi}[0]{\ac{ProTeGi}\xspace}
 \newcommand{\IR}[0]{\ac{IR}\xspace}
 \newcommand{\KISS}[0]{\ac{KISS}\xspace}
 \newcommand{\LiSSA}[0]{\ac{LiSSA}\xspace}
+\newcommand{\LiSSAs}[0]{\acp{LiSSA}\xspace}
 \newcommand{\LISSA}[0]{\LiSSA}
 \newcommand{\LiSSAf}[0]{\ac{LiSSA} framework\xspace}
 \newcommand{\LISSAf}[0]{\LISSAf}
@@ -89,10 +92,12 @@
 \newcommand{\AI}[0]{\ac{AI}\xspace}
 \newcommand{\fone}[0]{F\textsubscript{1}-Score\xspace}
 \newcommand{\ftwo}[0]{F\textsubscript{2}-Score\xspace}
+\newcommand{\fbeta}[0]{F\textsubscript{$\beta$}-Score\xspace}
 \newcommand{\idots}[0]{\ensuremath{[\dots]}}
 \newcommand{\iter}[0]{\acs{iter}\xspace}
 \newcommand{\feed}[0]{\acs{feed}\xspace}
-\newcommand{\ubc}[0]{\ac{ucb}\xspace}
+\newcommand{\ucb}[0]{\ac{ucb}\xspace}
+\newcommand{\REST}[0]{\ac{REST}\xspace}
 
 
 \newcommand{\tripplequote}[0]{\textquotesingle{}\textquotesingle{}\textquotesingle{}}
