feat: add lissa pipeline graphic

--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -57,4 +57,17 @@ My work will contribute an \APO module to this framework.
 It can be used to automatically refine a prompt on a dataset and optionally chain the optimization with the regular evaluation pipeline of the \LiSSAf
 I am expecting to improve \TLR rates, especially for larger projects in the \RtR domain.
 
+\begin{figure}
+    \centering
+    \includesvg[width=\textwidth]{graphics/LiSSA_pipeline_with_optimization.svg}
+    \caption{Overview of the proposed prompt optimization approach for \TLR tasks in the \LiSSAf. Modified from \citewithauthor{fuchss2025LiSSAGeneric}}
+    \label{fig:intro_prompt_optimization}
+\end{figure}
+
+The additional step is highlighted in \autoref{fig:intro_prompt_optimization}.
+It will be placed after the initial preprocessing of the input data.
+The \promptoptimizer module will use the preprocessed data to optimize a given prompt.
+The optimized prompt can then be used in the regular \LLM-based prompting step to classify \TLs.
+
+
 \Todo{Intro sollte länger sein. Figur muss beschrieben sein. ggf beispiel einführen. Problem deutlich hervorheben}
